force-app/main/default/objects/Functional_Location__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorize_Group__c</fullName>
        <label>Authorize Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CatelogProfile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CatelogProfile</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>CatelogProfile</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Functional Location (CatelogProfile)</relationshipLabel>
        <relationshipName>CatelogProfile</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Code</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>CompanyCode</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Functional Location (Company Code)</relationshipLabel>
        <relationshipName>Functional_Location4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CostCenter__c</fullName>
        <label>CostCenter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Related_Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Related Equipment</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>Functional Locations (First Related Equipment)</relationshipLabel>
        <relationshipName>Functionals_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Functional_Location_Area__c</fullName>
        <formula>IF(  MID(  MainWorkCenter_Text__c  , 4, 1)  = &quot;A&quot;, &quot;A&quot;,  IF(MID(MainWorkCenter_Text__c, 4, 1)  = &quot;B&quot;, &quot;B&quot;,  IF( AND(MID(MainWorkCenter_Text__c, 4, 1)= &quot;C&quot;, LEN(MainWorkCenter_Text__c)=6 ) , &quot;C&quot;,  IF(MID(MainWorkCenter_Text__c ,4, 1)  = &quot;D&quot;, &quot;D&quot;,  IF(MID(MainWorkCenter_Text__c, 4, 1)  = &quot;E&quot;, &quot;E&quot;,  IF(MID(MainWorkCenter_Text__c, 4, 1)  = &quot;F&quot;, &quot;F&quot;,  
IF( AND( Maintenance_Plant_Text__c  = &quot;1200&quot;, OR( PlantSection__c = &quot;ID1&quot;,PlantSection__c = &quot;T1&quot;,PlantSection__c = &quot;T2&quot;,PlantSection__c = &quot;WS&quot;) ) , &quot;A&quot;, IF(AND( Maintenance_Plant_Text__c  = &quot;1200&quot;, OR( PlantSection__c = &quot;T4&quot;,PlantSection__c = &quot;UT&quot;,PlantSection__c = &quot;UT2&quot;) ), &quot;B&quot;,  
IF(AND( Maintenance_Plant_Text__c  = &quot;1200&quot;, OR( PlantSection__c = &quot;T3&quot;,PlantSection__c = &quot;T5&quot;) ),&quot;C&quot;, 
 IF(AND( Maintenance_Plant_Text__c  = &quot;1200&quot;, OR( PlantSection__c = &quot;MO&quot;,PlantSection__c = &quot;OF&quot;) ), &quot;D&quot;,
IF(AND( Maintenance_Plant_Text__c  = &quot;3200&quot;, OR( PlantSection__c = &quot;T2&quot;)), &quot;A&quot;,
IF(AND( Maintenance_Plant_Text__c  = &quot;3200&quot;, OR( PlantSection__c = &quot;T4&quot;) ), &quot;B&quot;, 
 IF(AND( Maintenance_Plant_Text__c  = &quot;3200&quot;, OR( PlantSection__c = &quot;BU&quot;,PlantSection__c = &quot;CO&quot;,PlantSection__c = &quot;ID1&quot;,PlantSection__c = &quot;OF&quot;,PlantSection__c = &quot;P1&quot;,PlantSection__c = &quot;UT&quot;,PlantSection__c = &quot;WS&quot;) ), &quot;F&quot;, 
 IF(AND( Maintenance_Plant_Text__c  = &quot;4200&quot;, OR( PlantSection__c = &quot;AN&quot;,PlantSection__c = &quot;BU&quot;,PlantSection__c = &quot;CO&quot;,PlantSection__c = &quot;HE&quot;,PlantSection__c = &quot;ID1&quot;,PlantSection__c = &quot;L1&quot;,PlantSection__c = &quot;OF&quot;,PlantSection__c = &quot;UT&quot;,PlantSection__c = &quot;WS&quot;) ),&quot;E&quot;, 
 IF(AND( Maintenance_Plant_Text__c  = &quot;7200&quot;, OR( PlantSection__c = &quot;T1&quot;,PlantSection__c = &quot;T2&quot;) ), &quot;A&quot;, 
 IF(AND( Maintenance_Plant_Text__c  = &quot;7200&quot;, OR( PlantSection__c = &quot;T4&quot;) ), &quot;B&quot;,  IF(AND( Maintenance_Plant_Text__c  = &quot;7200&quot;, OR( PlantSection__c = &quot;B1&quot;,PlantSection__c = &quot;CO&quot;,PlantSection__c = &quot;ID1&quot;,PlantSection__c = &quot;MO&quot;,PlantSection__c = &quot;OF&quot;,PlantSection__c = &quot;P1&quot;,PlantSection__c = &quot;UT&quot;,PlantSection__c = &quot;WS&quot;) ),&quot;F&quot;,  
IF(AND( Maintenance_Plant_Text__c  = &quot;8200&quot;, OR( PlantSection__c = &quot;UT&quot;) ),&quot;B&quot; , IF(AND( Maintenance_Plant_Text__c  = &quot;2200&quot;, OR( PlantSection__c = &quot;UT&quot;,PlantSection__c = &quot;UT2&quot;)), &quot;B&quot;, &quot; &quot;) ) ) ) ) ) ) ) ) ) ) )  
) ) ) ) ) ) )</formula>
        <label>Functional Location Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <externalId>true</externalId>
        <label>Key</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LINK__c</fullName>
        <formula>HYPERLINK(&quot;/lightning/cmp/c__THOR_FunctionalLocationHistoryListDisplayer?c__recordId=&quot;+ Id + &quot;&amp;c__fromRecordId=&quot; + Id + &quot;&amp;c__navigateBack=false&quot; ,&quot;LINK TO RECORD&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LINK</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MainWorkCenter_Text__c</fullName>
        <formula>MainWorkCenter__r.Name</formula>
        <label>MainWorkCenter(Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MainWorkCenter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MainWorkCenter</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>Main Work Center</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Functional Location (MainWorkCenter)</relationshipLabel>
        <relationshipName>Functional_Location5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Maintenance_Plant_Text__c</fullName>
        <formula>Maintenance_Plant__r.Name</formula>
        <label>Maintenance Plant(Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Plant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maintenance Plant</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>Plant</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Functional Location (Maintenance Plant)</relationshipLabel>
        <relationshipName>Functional_Location6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mainworkcenter_type__c</fullName>
        <label>Mainworkcenter type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Functional_Location_Text__c</fullName>
        <label>Parent Functional Location Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Functional_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Functional Location</label>
        <referenceTo>Functional_Location__c</referenceTo>
        <relationshipName>Functional_Location_Master_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PlannerGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PlannerGroup</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>PlannerGroup</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Functional Location (PlannerGroup)</relationshipLabel>
        <relationshipName>Functional_Location1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planning_Plant_Text__c</fullName>
        <formula>Planning_Plant__r.Name</formula>
        <label>Planning Plant(Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planning_Plant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Planning Plant</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Functional Location (Planning Plant)</relationshipLabel>
        <relationshipName>Functional_Location2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PlantSection__c</fullName>
        <label>PlantSection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Status__c</fullName>
        <label>System Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Status__c</fullName>
        <label>User Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mainWorkCenterPlant_Text__c</fullName>
        <formula>mainWorkCenterPlant__r.Name</formula>
        <label>mainWorkCenterPlant(Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mainWorkCenterPlant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>mainWorkCenterPlant</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Functional Location (mainWorkCenterPlant)</relationshipLabel>
        <relationshipName>Functional_Location3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>objectType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>objectType</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>Object type</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Functional Location</relationshipLabel>
        <relationshipName>Functional_Location</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>supFL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>supFL</label>
        <referenceTo>Functional_Location__c</referenceTo>
        <relationshipLabel>Functional Location (subFL)</relationshipLabel>
        <relationshipName>Functional_Location</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wbsElement__c</fullName>
        <label>wbsElement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Functional Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MainWorkCenter__c</columns>
        <columns>mainWorkCenterPlant__c</columns>
        <columns>CatelogProfile__c</columns>
        <columns>Object_Type__c</columns>
        <columns>objectType__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>PlantSection__c</columns>
        <columns>wbsElement__c</columns>
        <columns>Area__c</columns>
        <columns>Mainworkcenter_type__c</columns>
        <columns>Functional_Location_Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>11-FRC-208</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Functional Location</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>